# jaspervdj

./: .ghci  .gitignore  404.html  LICENSE  README.markdown  contact.markdown  cv.markdown  hakyll.hs  index.html  jaspervdj.cabal  links.markdown  photos.markdown  projects.markdown  recommendations.markdown  shell.nix  site.hs  stack.yaml
css/: base.css  default.css  layout.css
drafts/: 12-urenloop.markdown  2015-01-30-haskell-design-patterns-services.markdown  2015-05-21-ordered-state.hs  2015-05-21-ordered-state.lhs  ad-hoc-datatypes.lhs  fix.lhs  haskell-mistakes.lhs
files/: 2011-gsoc-text-utf8-proposal.html  2017-01-17-got.sql.txt  2020-03-05-demo.hs  2020-03-12-demo.hs  2023-06-19-haskell-puzzles.js  2024-08-21-turnstyle.js  binary-trees.prof.html  lisp-quality.awk
images/: 2013-11-20-badgers-partitioned.dot  2013-11-20-tree-depth.dot  2013-11-21-badgers-balanced.dot  2013-11-21-badgers-huffman.dot  2013-11-21-expected-length-bal.tex  2013-11-21-expected-length-huf-expanded.tex  2013-11-21-expected-length-huf.tex  2013-11-21-harmonic-number.tex  2013-11-21-length-huf.tex  2013-11-21-zipfs-law.tex  2014-11-27-gaussian-blur-kernel.tex  2015-10-23-scope-fruit.dot  2015-10-23-scope-union.dot  2015-10-23-trie-prefix.dot  2015-10-23-trie-singleton.dot  2015-10-23-trie-unionwith.dot  2015-10-30-trie-empty.dot
js/: jquery.tweet.js  sidebar.js
photos/: 2012-12-04-01.jpg.metadata  2013-04-20-01.jpg.metadata  2013-04-20-02.jpg.metadata  2013-05-09-01.jpg.metadata  2013-08-15-01.jpg.metadata  2013-08-15-02.jpg.metadata  2013-09-03-01.jpg.metadata  2013-09-07-01.jpg.metadata  2013-09-07-02.jpg.metadata  2013-09-22-01.jpg.metadata  2013-09-22-02.jpg.metadata  2013-12-21-01.jpg.metadata  2014-01-26-01.jpg.metadata  2014-03-08-01.jpg.metadata  2014-04-01-01.jpg.metadata  2014-04-01-02.jpg.metadata  2014-04-01-03.jpg.metadata  2014-04-01-04.jpg.metadata  (+363 more)
src/: Main.hs
(+168 files in other folders)
