Name:               jaspervdj
Version:            0.1.0.0
Synopsis:           Personal website of Jasper Van der Jeugt
Description:        Personal website of Jasper Van der Jeugt
Homepage:           http://jaspervdj.be/
License:            AllRightsReserved
License-file:       LICENSE
Author:             Jasper Van der Jeugt
Maintainer:         m@jaspervdj.be
Copyright:          (C) 2013 Jasper Van der Jeugt
Category:           Web
Build-type:         Simple
Extra-source-files: README.markdown
Cabal-version:      >= 1.8

Executable jaspervdj
  Main-is:        Main.hs
  Ghc-options:    -Wall
  Hs-source-dirs: src

  Build-depends:
    base      >= 4.6  && < 4.8,
    binary    >= 0.5  && < 0.8,
    directory >= 1.2  && < 1.3,
    filepath  >= 1.3  && < 1.4,
    hakyll    >= 4.6  && < 4.7,
    pandoc    >= 1.12 && < 1.14,
    process   >= 1.1  && < 1.3
